--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.13.2",
     "mongoose": "^6.2.5",
     "mongoose-paginate": "^5.0.3",
+    "nest-morgan": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
